<resources>
    <string name="app_name">Shopping @ Vivians Quick App</string>
    <string name="shopping_vivians_quick_app">Shopping @ Vivians Quick App</string>
    <string name="vivs_home">vivs_home</string>
    <string name="shopping_vivians_app_home_page" translatable="false"><a href="https://vivians.biz/shopping-at-vivians-online/">
        Shopping @ Vivian\'s App Home Page</a></string>
    <string name="blog_of_shopping_vivians_app_blog_page" translatable="false"><a href="https://home.vivians.biz/blog-at-shopping-at-vivians/">
        Blog of Shopping @ Vivian\'s App Blog Page</a></string>
    <string name="contact_vivian_contact_page" translatable="false"><a href="https://home.vivians.biz/contact/">
        Contact Vivian Contact Page</a></string>
    <string name="shopping_vivians_app_shopping_dueling_worlds_page" translatable="false"><a href="https://shop.duelingworlds.com/">
        Shopping @ Vivian\'s App Shopping @ Dueling Worlds© Page</a></string>
    <string name="rest_512">rest_512</string>
    <string name="restless_child_1988_to_present_app_home_page" translatable="false"><a href="https://home.restlesschild.rocks/">
        Restless Child 1988 to Present App Home Page</a></string>
    <string name="bad_512">bad_512</string>
    <string name="bad_girls_dream_1990_present_app_home_page" translatable="false"><a href="https://homer.bgdmusic.club/">
        Bad Girls Dream 1990 - Present App Home Page</a></string>
    <string name="brayton_scott_music_entertainment_all_music_app_17_songs_3_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/brayton-scott-music-entertainment-all-music-app-17-songs-3-99/">
            Brayton Scott Music Entertainment All Music App, 17 Songs $3.99</a></string>
    <string name="restless_child_album_in_app_site_1989_album_12_songs_2_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/restless-child-album-in-app-site-1989-album-12-songs-2-99/">
            Restless Child Album in App Site 1989 Album, 12 songs $2.99</a></string>
    <string name="bad_girls_dream_album_in_app_site_the_taste_of_satisfaction_1990_album_5_songs_1_99" translatable="false">
        <a href="https://shop.duelingworlds.com/shop/bad-girls-dream-album-in-app-site-the-taste-of-satisfaction-1990-album-5-songs-1-99/">
            Bad Girls Dream Album in App Site “The Taste of Satisfaction” 1990 Album, 5 songs $1.99</a></string>
    <string name="dueling_worlds_international_quick_app" translatable="false">
        <a href="https://duelingworlds.com">Dueling Worlds© International Quick App</a></string>
</resources>